@@ -4,10 +4,15 @@
 
 - add examples/typedtree_collect_texp_apply
 
-- Bootstrapped equivalence checking for Parsetree.core_type: matching
+- bootstrapped equivalence checking for Parsetree.core_type: matching
   between types for applying rewriting rules is now complete, and is
   implemented by overriding Parsetree and deriving eq. The former
   incomplete equivalence checking is used to bootstrap.
+
+- support aliases even if the target module is defined in the same
+  module (we do not take declaration order into account yet, so there
+  can be wrong shadowings, and even loops, even if we suppress the
+  trivial ones).
 
 # override 0.1.0, 2019-05-09
 
